--- a/MerlionPortal/MerlionPortal-war/web/snippets/default/header.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/snippets/default/header.xhtml
@@ -6,7 +6,7 @@
       >
     <head>
         <ui:composition>
-
+            <title>Merlion Portal - ${pageName}</title>
         </ui:composition>
     </head>
 </html>
