add in delete and view in session bean for MRP-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp.xhtml
@@ -15,11 +15,13 @@
     </h:head>
     <h:body>
         <h:form id="formMain">
-            <h1>MyPrimeFacesOrganizer - Powered by PrimeFaces 5.0</h1>
+            <h1>Welcome to MRP II page</h1>
             <p:menubar>
                 <p:menuitem value="MRP II" url="mrp.xhtml" />
                 <p:menuitem value="View All Products" url="viewAllProducts.xhtml" />
                 <p:menuitem value="Add New Product" url="addNewProduct.xhtml" />
+                <p:menuitem value="Delete Product" url="deleteProduct.xhtml" />
+                <p:menuitem value="View A Product" url="viewAProduct.xhtml" />
             </p:menubar>
             <br/>
             <p:panel header="Welcome">
