--- a/MerlionPortal/MerlionPortal-war/web/viewAProduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/viewAProduct.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>View All Products</title>
         <style type="text/css">
@@ -24,9 +25,25 @@
             </p:menubar>
             <br/>
             <p:panel header="View All Products">
-                <p:dataTable var="product" value="#{productDataTableBean.myCompanyProducts}" paginator="true" rows="5" emptyMessage="No product">
-                    <p:column headerText="Product ID" sortBy="#{product.productId}">
-                        <h:outputText value="#{product.productId}" />
+                <p:panelGrid>
+                                       <p:row>
+                        <p:column>
+                            <p:outputLabel for="productId" style="font-weight: bold" value="Product Id: " />
+                        </p:column>
+                        <p:column>
+                            <p:inputText required="true" label="Product Id" requiredMessage="Product Id is required." id="productId" value="#{productManagerBean.productId}">
+                                <f:validateLength minimum="1" maximum="16" />
+                            </p:inputText>
+                        </p:column>
+                        <p:column>
+                            <p:message for="productId" />
+                        </p:column>
+                    </p:row>
+                </p:panelGrid>
+                
+                <p:dataTable var="product" value="#{productManagerBean.aProduct}" paginator="true" rows="5" emptyMessage="No product">
+                    <p:column headerText="Product ID">
+                        <h:outputText value="#{productManagerBean.aProduct.productId}" />
                     </p:column>
                     <p:column headerText="Product Name" sortBy="#{product.productName}">
                         <h:outputText value="#{product.productName}" />
@@ -48,5 +65,7 @@
         </h:form>
     </h:body>
 </html>
+
+
 
 
