modified role and relevant css

--- a/MerlionPortal/MerlionPortal-war/web/admin/createrole.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createrole.xhtml
@@ -10,7 +10,32 @@
         <ui:param name="pageName" value="Create Role" />
         <!-- Override Content -->
         <ui:define name="content">
-
+            <div class="container">
+                <div class="alert alert-blue">
+                    <h2 class="roleTitle">Order Entry System</h2>
+                    <div class="badge alert-default">Generate Purchase Order <i class="glyphicon glyphicon-plus"></i></div>
+                    <div class="badge alert-default">Generate Purchase Order <i class="glyphicon glyphicon-plus"></i></div>
+                    <div class="badge alert-default">Generate Purchase Order <i class="glyphicon glyphicon-plus"></i></div>
+                </div>
+                <div class="alert alert-purple">
+                    <h2 class="roleTitle">Common Infrastructure</h2>
+                </div>
+                <div class="alert alert-orange">
+                    <h2 class="roleTitle">Material Resource Planning II</h2>
+                </div>
+                <div class="alert alert-green">
+                    <h2 class="roleTitle">Customer Relationship Management System</h2>
+                </div>
+                <div class="alert alert-yellow">
+                    <h2 class="roleTitle">Transport Management System</h2>
+                </div>
+                <div class="alert alert-blue">
+                    <h2 class="roleTitle">Warehouse Management System</h2>
+                </div>
+                <div class="alert alert-purple">
+                    <h2 class="roleTitle">Global Rates Negotiation System</h2>
+                </div>
+            </div>
         </ui:define>
     </ui:composition>
 </html>
