--- a/MerlionPortal/MerlionPortal-war/web/createsystemadminrole.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/createsystemadminrole.xhtml
@@ -1,29 +1,41 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Create System Admin Role</title>
-    </h:head>
-    <h:body>
-        <h2>Create System Admin Role</h2>
-        <h:form>
-            <h:panelGrid columns="3" cellpadding="5">
-                <p:growl id="growl" life="2000" />
-                <p:outputLabel style="font-weight: bold" value="User ID :"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="userId" value="#{userAccountManagedBean.userId}" >
-                </p:inputText>
-                <br/>
 
-                <p:outputLabel style="font-weight: bold" value="Company ID :"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="companyId" value="#{userAccountManagedBean.companyId}" >
-                </p:inputText>
-                <br/>
-                <p:commandButton value="Submit" id="ajax" update="growl" actionListener="#{userAccountManagedBean.createSystemAdminRole}" styleClass="ui-priority-primary" />
-                
-            </h:panelGrid>
-        </h:form>
-    </h:body>
+    <ui:composition template="template.xhtml">
+        <ui:param name="pageName" value="Index" />
+
+        <!-- Override Content -->
+        <ui:define name="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7">
+                        <h:form>
+                            <h:panelGrid columns="3" cellpadding="5">
+                                <p:growl id="growl" life="2000" />
+
+
+                                <p:outputLabel style="font-weight: bold" value="Company ID :"/>
+                                <p:inputText required="true" requiredMessage="Field is required." id="companyId" value="#{userRoleManagerBean.userCompanyId}" >
+                                </p:inputText>
+                                <br/>
+                                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                                <p:commandButton value="Submit" id="ajax" update="growl" actionListener="#{userRoleManagerBean.createSystemAdminRole}" styleClass="ui-priority-primary" />
+                                <p:commandButton type="reset" value="Reset"/>
+                            </h:panelGrid>
+                        </h:form>
+                    </div>
+                </div>
+            </div>
+        </ui:define>
+
+    </ui:composition>
 </html>
+
+
+
 
