--- a/MerlionPortal/MerlionPortal-war/web/createsystemadminuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/createsystemadminuser.xhtml
@@ -1,59 +1,74 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Create System Admin User</title>
-    </h:head>
-    <h:body>
-        
-        <h2>Register Company Information</h2>
-        
-        <h:form>
-            <h:panelGrid columns="3" cellpadding="5">
-                <p:growl id="growl" life="2000" />
-                <p:outputLabel style="font-weight: bold" value="First Name:"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="firstName" value="#{userAccountManagedBean.firstNameNewUser}" >
-                </p:inputText>
-                <br/>
 
-                <p:outputLabel style="font-weight: bold" value="Last Name:"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="lastName" value="#{userAccountManagedBean.lastNameNewUser}" >
-                </p:inputText>
-                <br/>
-                <p:outputLabel style="font-weight: bold" value="Email Address:"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="emailAddress" value="#{userAccountManagedBean.emailAddressNewUser}" >
-                </p:inputText>
-                <br/>
-                <p:outputLabel style="font-weight: bold" value="Password:"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="password" value="#{userAccountManagedBean.passwordNewUser}" >
-                </p:inputText>
-                <br/>
-                <p:outputLabel style="font-weight: bold" value="Postal Address:"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="postalAddress" value="#{userAccountManagedBean.postalAddressNewUser}" >
-                </p:inputText>
-                <br/>
-                <p:outputLabel style="font-weight: bold" value="Contact Number:"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="contactNumber" value="#{userAccountManagedBean.contactNumberNewUser}" >
-                </p:inputText>
-                <br/>
-                <p:outputLabel style="font-weight: bold" value="Salution:"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="salution" value="#{userAccountManagedBean.salutionNewUser}" >
-                </p:inputText>
-                <br/>
-                <p:outputLabel style="font-weight: bold" value="User Type:"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="userType" value="#{userAccountManagedBean.userTypeNewUser}" >
-                </p:inputText>
-                <br/>
-                <p:outputLabel style="font-weight: bold" value="Company ID:"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="companyId" value="#{userAccountManagedBean.companyIdNewUser}" >
-                </p:inputText>
-                <br/>
-                <p:commandButton value="Submit" id="ajax" update="growl" actionListener="#{userAccountManagedBean.createSystemAdmin}" styleClass="ui-priority-primary" />
+    <ui:composition template="template.xhtml">
+        <ui:param name="pageName" value="Index" />
 
-            </h:panelGrid>
-        </h:form>
-    </h:body>
+        <!-- Override Content -->
+        <ui:define name="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2>Create System Admin User</h2>
+
+                        <h:form>
+                            <h:panelGrid columns="3" cellpadding="5">
+                                <p:growl id="growl" life="2000" />
+                                <p:outputLabel style="font-weight: bold" value="First Name:"/>
+                                <p:inputText required="true" requiredMessage="Field is required." id="firstName" value="#{userAccountManagedBean.firstNameNewUser}" >
+                                </p:inputText>
+                                <br/>
+
+                                <p:outputLabel style="font-weight: bold" value="Last Name:"/>
+                                <p:inputText required="true" requiredMessage="Field is required." id="lastName" value="#{userAccountManagerBean.lastNameNewUser}" >
+                                </p:inputText>
+                                <br/>
+                                <p:outputLabel style="font-weight: bold" value="Email Address:"/>
+                                <p:inputText required="true" requiredMessage="Field is required." id="emailAddress" value="#{userAccountManagerBean.emailAddressNewUser}" >
+                                </p:inputText>
+                                <br/>
+                                <p:outputLabel style="font-weight: bold" value="Password:"/>
+                                <p:inputText required="true" requiredMessage="Field is required." id="password" value="#{userAccountManagerBean.passwordNewUser}" >
+                                </p:inputText>
+                                <br/>
+                                <p:outputLabel style="font-weight: bold" value="Postal Address:"/>
+                                <p:inputText required="true" requiredMessage="Field is required." id="postalAddress" value="#{userAccountManagerBean.postalAddressNewUser}" >
+                                </p:inputText>
+                                <br/>
+                                <p:outputLabel style="font-weight: bold" value="Contact Number:"/>
+                                <p:inputText required="true" requiredMessage="Field is required." id="contactNumber" value="#{userAccountManagerBean.contactNumberNewUser}" >
+                                </p:inputText>
+                                <br/>
+                                <p:outputLabel style="font-weight: bold" value="Salution:"/>
+                                <p:inputText required="true" requiredMessage="Field is required." id="salution" value="#{userAccountManagerBean.salutionNewUser}" >
+                                </p:inputText>
+                                <br/>
+                                <p:outputLabel style="font-weight: bold" value="User Type:"/>
+                                <p:inputText required="true" requiredMessage="Field is required." id="userType" value="#{userAccountManagerBean.userTypeNewUser}" >
+                                </p:inputText>
+                                <br/>
+                                <p:outputLabel style="font-weight: bold" value="Company ID:"/>
+                                <p:inputText required="true" requiredMessage="Field is required." id="companyId" value="#{userAccountManagerBean.companyIdNewUser}" >
+                                </p:inputText>
+                                <br/>
+                                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                                <p:commandButton value="Submit" id="ajax" update="growl" actionListener="#{userAccountManagerBean.createSystemAdmin}" styleClass="ui-priority-primary" />
+                                <h:commandButton type="reset" value="Reset"/>
+                            </h:panelGrid>
+                        </h:form>
+                    </div>
+                </div>
+            </div>
+        </ui:define>
+
+    </ui:composition>
 </html>
+
 
