--- a/MerlionPortal/MerlionPortal-war/web/registercompany.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/registercompany.xhtml
@@ -14,32 +14,32 @@
             <h:panelGrid columns="3" cellpadding="5">
                 <p:growl id="growl" life="2000" />
                 <p:outputLabel style="font-weight: bold" value="Company Name :"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="companyName" value="#{userAccountManagedBean.companyName}" />
+                <p:inputText required="true" requiredMessage="Field is required." id="companyName" value="#{userAccountManagerBean.companyName}" />
                 <br/>
                 <p:outputLabel style="font-weight: bold" value="Company Address :"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="companyAddress" value="#{userAccountManagedBean.companyAddress}" />
+                <p:inputText required="true" requiredMessage="Field is required." id="companyAddress" value="#{userAccountManagerBean.companyAddress}" />
                 <br/>
                 <p:outputLabel style="font-weight: bold" value="Company Contact Person Name :"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="companyContactPersonName" value="#{userAccountManagedBean.contactPersonName}" />
+                <p:inputText required="true" requiredMessage="Field is required." id="companyContactPersonName" value="#{userAccountManagerBean.contactPersonName}" />
                 <br/>
                 <p:outputLabel style="font-weight: bold" value="Company Contact Number :"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="companyContactNumber" value="#{userAccountManagedBean.contactNumber}" />
+                <p:inputText required="true" requiredMessage="Field is required." id="companyContactNumber" value="#{userAccountManagerBean.contactNumber}" />
                 <br/>
                 <p:outputLabel style="font-weight: bold" value="Company Email Address :"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="companyEmailAddress" value="#{userAccountManagedBean.emailAddress}" />
+                <p:inputText required="true" requiredMessage="Field is required." id="companyEmailAddress" value="#{userAccountManagerBean.emailAddress}" />
                 <br/>
                 <p:outputLabel style="font-weight: bold" value="Company Description :"/>
-                <p:inputText required="true" requiredMessage="Field is required." id="companyDescription" value="#{userAccountManagedBean.description}" />
+                <p:inputText required="true" requiredMessage="Field is required." id="companyDescription" value="#{userAccountManagerBean.description}" />
                 <br/>
                 <p:outputLabel for="basic" style="font-weight: bold" value="Package Choice" />
-                <p:selectOneListbox id="basic" value="#{userAccountManagedBean.package1}">
+                <p:selectOneListbox id="basic" value="#{userAccountManagerBean.package1}">
                     <f:selectItem itemLabel="Package for 1PL" itemValue="1" />
                     <f:selectItem itemLabel="Package for 2PL" itemValue="2" />
                     <f:selectItem itemLabel="Package for 3PL" itemValue="3" />
                     <f:selectItem itemLabel="Package for 4PL" itemValue="4" />
                 </p:selectOneListbox>
 
-                <p:commandButton value="Submit" id="ajax" update="growl" actionListener="#{userAccountManagedBean.registerNewCompany}" styleClass="ui-priority-primary" />
+                <p:commandButton value="Submit" id="ajax" update="growl" actionListener="#{userAccountManagerBean.registerNewCompany}" styleClass="ui-priority-primary" />
             </h:panelGrid>
         </h:form>
     </h:body>
