--- a/MerlionPortal/MerlionPortal-war/web/viewAllProducts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/viewAllProducts.xhtml
@@ -21,6 +21,7 @@
                 <p:menuitem value="Add New Product" url="addNewProduct.xhtml" />
                 <p:menuitem value="Delete Product" url="deleteProduct.xhtml" />
                 <p:menuitem value="View A Product" url="viewAProduct.xhtml" />
+                <p:menuitem value="Edit A Product" url="editProduct.xhtml" />
             </p:menubar>
             <br/>
             <p:panel header="View All Products">
