--- a/MerlionPortal/MerlionPortal-war/web/deleteProduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/deleteProduct.xhtml
@@ -22,6 +22,7 @@
                 <p:menuitem value="Add New Product" url="addNewProduct.xhtml" />
                 <p:menuitem value="Delete Product" url="deleteProduct.xhtml" />
                 <p:menuitem value="View A Product" url="viewAProduct.xhtml" />
+                <p:menuitem value="Edit A Product" url="editProduct.xhtml" />
             </p:menubar>
             <br/>
             <p:panel id="panel" header="Delete Product">
