--- a/MerlionPortal/MerlionPortal-war/web/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp.xhtml
@@ -11,22 +11,50 @@
                 left:200px;
                 top: 50px;
             }
+            .ui-layout, .ui-layout-doc, .ui-layout-unit, .ui-layout-wrap, .ui-layout-bd, .ui-layout-hd{
+                border: none;
+            }
+            
+
         </style>
     </h:head>
     <h:body>
         <h:form id="formMain">
-            <h1>Welcome to MRP II page</h1>
-            <p:menubar>
-                <p:menuitem value="MRP II" url="mrp.xhtml" />
-                <p:menuitem value="View All Products" url="viewAllProducts.xhtml" />
-                <p:menuitem value="Add New Product" url="addNewProduct.xhtml" />
-                <p:menuitem value="Delete Product" url="deleteProduct.xhtml" />
-                <p:menuitem value="View A Product" url="viewAProduct.xhtml" />
-            </p:menubar>
-            <br/>
-            <p:panel header="Welcome">
-                Welcome to MyPrimeFacesOrganizer. This simple application demonstrates the capability of PrimeFaces in helping developers to build RIA rapidly.
-            </p:panel>
+            <h1>Welcome to MRP II system</h1>
+
+            <p:layout style="min-width:400px;min-height:1000px; borderless">      
+                <p:layoutUnit position="west" resizable="true" size="240" minSize="40" maxSize="1000">
+
+                    <p:menu>
+                        <p:submenu label =" Manage Your Products">
+                            <p:menuitem value="MRP II" url="mrp.xhtml" />
+                            <p:menuitem value="View All Products" url="viewAllProducts.xhtml" />
+                            <p:menuitem value="Add New Product" url="addNewProduct.xhtml" />
+                            <p:menuitem value="Delete Product" url="deleteProduct.xhtml" />
+                            <p:menuitem value="View A Product" url="viewAProduct.xhtml" />
+                            <p:menuitem value="Edit A Product" url="editProduct.xhtml" />
+                        </p:submenu>
+                    </p:menu>
+
+                </p:layoutUnit>
+
+                <p:layoutUnit position="center">   
+                    <p:panel header="Welcome">
+                           
+                        Welcome to MRP II system!
+                        <Br/><Br/><Br/>
+                        MRP II system empowers your organization to: 
+                        <Br/><Br/>
+                        1. Manage your products
+                        <Br/><Br/>
+                        2. Conduct material requirement planning. This ensures materials are available for production, products are available for delivery to customers and 
+                        the lowest possible material and product levels in store could be maintained
+                        <Br/><Br/>
+                        3. Plan delivery schedules and conduct purchasing activities.
+                    </p:panel>
+                </p:layoutUnit>
+            </p:layout>
+
         </h:form>
     </h:body>
 </html>
